[gd_scene load_steps=27 format=3 uid="uid://dpcr50t48un4x"]

[ext_resource type="Script" uid="uid://d4hsqcdu6ymyu" path="res://1Player_script/swordman.gd" id="1_37ep1"]
[ext_resource type="PackedScene" uid="uid://dsdcsdvv2063l" path="res://Animation5+3/bar.tscn" id="2_scilc"]
[ext_resource type="Texture2D" uid="uid://b8oyk65xvxkau" path="res://FULL RPG ASSET/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Swordsman/Swordsman with shadows/Swordsman.png" id="3_3rlge"]
[ext_resource type="Texture2D" uid="uid://bkoy3wq2vosgy" path="res://Pic Level/Under-Photoroom.png" id="4_inghg"]
[ext_resource type="Texture2D" uid="uid://cm5kfx6r0bkps" path="res://Pic Level/Over-Photoroom.png" id="5_6yimy"]
[ext_resource type="Texture2D" uid="uid://dx08dcu3hstps" path="res://Pic Level/Process-Photoroom.png" id="6_nn4lu"]
[ext_resource type="Script" uid="uid://dle88wu7u6lgq" path="res://Pickup/lv_opition.gd" id="7_inbja"]
[ext_resource type="FontFile" uid="uid://61ecrjsbu6b1" path="res://Font/VT323-Regular.ttf" id="7_inghg"]
[ext_resource type="AudioStream" uid="uid://clsfxbkmx0k0s" path="res://Sound SFX game/hurt-self.mp3" id="8_6un6y"]
[ext_resource type="AudioStream" uid="uid://ub36p72o7skq" path="res://Sound SFX game/level-up-2.mp3" id="9_d7p73"]
[ext_resource type="AudioStream" uid="uid://b8vbodotfo3jg" path="res://Sound SFX game/sword-slash-01-266296.mp3" id="10_rncbh"]
[ext_resource type="AudioStream" uid="uid://bpavweymiw6xu" path="res://Sound SFX game/sword-blade-slicing-flesh-352708.mp3" id="10_scilc"]
[ext_resource type="AudioStream" uid="uid://pmpds3ncyoa8" path="res://Sound SFX game/sword-slash-and-swing-185432.mp3" id="12_3rlge"]
[ext_resource type="Script" uid="uid://7corn8tvr4x5" path="res://Animation5+3/Players/health.gd" id="14_6yimy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_au8vn"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_282yd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ATK1/atk1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ATK1/atk1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ATK2/atk2_1:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/ATK2/atk2_1:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/ATK2/atk2_2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/ATK2/atk2_2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/ATK2/atk2_3:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/ATK2/atk2_3:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/ATK3/atk3:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/ATK3/atk3:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wmx7i"]
resource_name = "attack1"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ATK1/atk1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25428283, 0.49552554),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ATK1/atk1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25428283, 0.49552554),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_1aual"]
resource_name = "attack2"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1, 1.1, 1.2, 1.3000001, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ATK2/atk2_1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2581949, 0.5020456),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ATK2/atk2_1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2581949, 0.5020456),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ATK2/atk2_2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5959346, 0.80066496),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/ATK2/atk2_2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5959346, 0.80066496),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/ATK2/atk2_3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.157965, 1.4070318),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/ATK2/atk2_3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.157965, 1.4070318),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_im2gr"]
resource_name = "attack3"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ATK3/atk3:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4942215, 0.6, 0.70231575, 0.80809426, 0.897324, 1.0031025, 1.0942216, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ATK3/atk3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4942215, 0.6, 0.70231575, 0.80809426, 0.897324, 1.0031025, 1.0942216, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_tvbty"]
resource_name = "death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93]
}

[sub_resource type="Animation" id="Animation_reykc"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_3il2c"]
resource_name = "idle"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_au8vn"]
resource_name = "walk"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmx7i"]
_data = {
&"RESET": SubResource("Animation_282yd"),
&"attack1": SubResource("Animation_wmx7i"),
&"attack2": SubResource("Animation_1aual"),
&"attack3": SubResource("Animation_im2gr"),
&"death": SubResource("Animation_tvbty"),
&"hurt": SubResource("Animation_reykc"),
&"idle": SubResource("Animation_3il2c"),
&"walk": SubResource("Animation_au8vn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au8vn"]
size = Vector2(33, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_reykc"]
radius = 50.0

[node name="Swordman" type="CharacterBody2D" groups=["player"]]
collision_mask = 4
script = ExtResource("1_37ep1")
gfx_path = NodePath("Sprite2D")
anim_path = NodePath("AnimationPlayer")
area_path = NodePath("Area2D")
atk1dmg = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_au8vn")

[node name="Area2D" type="Area2D" parent="." groups=["PlayerBody"]]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_au8vn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.29, 2.29)
limit_left = -448
limit_top = -320
limit_right = 493
limit_bottom = 320

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wmx7i")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_3rlge")
hframes = 15
vframes = 7

[node name="ATK1" type="Area2D" parent="Sprite2D" groups=["Hitbox1"]]

[node name="atk1" type="CollisionPolygon2D" parent="Sprite2D/ATK1"]
polygon = PackedVector2Array(20, -5, 21, -4, 5, 4, -2, 4, -10, 9, -9, 10, 4, 10, 13, 10, 18, 9, 22, 6, 28, 1, 30, -4, 30, -7, 20, -7)

[node name="ATK2" type="Area2D" parent="Sprite2D" groups=["Hitbox2"]]

[node name="atk2_1" type="CollisionPolygon2D" parent="Sprite2D/ATK2"]
polygon = PackedVector2Array(9, 11, 37, 9, 23, -20, 6, -7, 8, -5, 16, -3)

[node name="atk2_2" type="CollisionPolygon2D" parent="Sprite2D/ATK2"]
polygon = PackedVector2Array(25, -8, 26, -5, 7, 4, -2, 5, -8, 9, -10, 10, 8, 10, 17, 9, 21, 11, 30, 4, 39, -8, 28, -7)

[node name="atk2_3" type="CollisionPolygon2D" parent="Sprite2D/ATK2"]
polygon = PackedVector2Array(7, 2, 27, 5, 37, 0, 21, -4, 7, -1, 7, 3)

[node name="ATK3" type="Area2D" parent="Sprite2D" groups=["Hitbox3"]]

[node name="atk3" type="CollisionShape2D" parent="Sprite2D/ATK3"]
position = Vector2(25.5, 0.5)
shape = SubResource("RectangleShape2D_au8vn")

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_reykc")

[node name="SFX_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6un6y")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_Lv_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d7p73")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_sword_m1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_scilc")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_sword_m2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rncbh")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_sword_q" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_3rlge")
volume_db = -16.0
bus = &"SFX"

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Control" type="CanvasLayer" parent="Control2"]
layer = 0

[node name="XP" type="TextureProgressBar" parent="Control2/Control"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 182.0
offset_top = -136.0
offset_right = 182.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.36, 2.36)
max_value = 10.0
texture_under = ExtResource("4_inghg")
texture_over = ExtResource("5_6yimy")
texture_progress = ExtResource("6_nn4lu")

[node name="Level" type="Label" parent="Control2/Control/XP"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 71.0
offset_right = 357.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("7_inghg")
text = "Lv 1"

[node name="Lv_opition" type="VBoxContainer" parent="Control2/Control/XP"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.167
anchor_right = 0.5
anchor_bottom = 1.167
offset_left = -19.0
offset_top = -20.060013
offset_right = 21.0
offset_bottom = 19.939987
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_inbja")

[node name="Bar" parent="Control2/Control" instance=ExtResource("2_scilc")]
offset_left = 221.00002
offset_top = 77.0
offset_right = 302.78955
offset_bottom = 87.11185
scale = Vector2(5.8339357, 2.9139366)

[node name="health" type="Label" parent="Control2/Control"]
offset_left = 710.0
offset_top = 68.0
offset_right = 887.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("7_inghg")
theme_override_font_sizes/font_size = 30
text = "dsadsasadw"
script = ExtResource("14_6yimy")

[connection signal="area_entered" from="Sprite2D/ATK1" to="." method="_on_atk_1_area_entered"]
[connection signal="area_entered" from="Sprite2D/ATK2" to="." method="_on_atk_2_area_entered"]
[connection signal="area_entered" from="Sprite2D/ATK3" to="." method="_on_atk_3_area_entered"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
